# arduino-libs

./: .gitignore  README.md  install.sh
libs/Adafruit-GFX-Library/: CMakeLists.txt
libs/Adafruit_BusIO/: Adafruit_SPIDevice.cpp  CMakeLists.txt
libs/Adafruit_BusIO/examples/i2c_address_detect/: i2c_address_detect.ino
libs/Adafruit_BusIO/examples/i2c_readwrite/: i2c_readwrite.ino
libs/Adafruit_BusIO/examples/i2c_registers/: i2c_registers.ino
libs/Adafruit_BusIO/examples/i2corspi_register/: i2corspi_register.ino
libs/Adafruit_BusIO/examples/spi_modetest/: spi_modetest.ino
libs/Adafruit_BusIO/examples/spi_readwrite/: spi_readwrite.ino
libs/Adafruit_BusIO/examples/spi_register_bits/: spi_register_bits.ino
libs/Adafruit_BusIO/examples/spi_registers/: spi_registers.ino
libs/Adafruit_ILI9341/: CMakeLists.txt
libs/Adafruit_ILI9341/examples/graphicstest_featherwing/: graphicstest_featherwing.ino
libs/Adafruit_ILI9341/examples/touchpaint_featherwing/: touchpaint_featherwing.ino
libs/SPI/: CMakeLists.txt
libs/SPI/examples/BarometricPressureSensor/: BarometricPressureSensor.ino
libs/SPI/examples/DigitalPotControl/: DigitalPotControl.ino
libs/Wirelib/src/cores/arduino/: CDC.cpp  USBCore.cpp  wiring_analog.c
libs/Wirelib/src/libraries/EEPROM/examples/eeprom_read/: eeprom_read.ino
libs/Wirelib/src/libraries/EEPROM/examples/eeprom_update/: eeprom_update.ino
libs/Wirelib/src/libraries/EEPROM/examples/eeprom_write/: eeprom_write.ino
libs/Wirelib/src/libraries/SPI/examples/BarometricPressureSensor/: BarometricPressureSensor.ino
libs/Wirelib/src/libraries/SPI/examples/DigitalPotControl/: DigitalPotControl.ino
libs/Wirelib/src/libraries/Wire/examples/SFRRanger_reader/: SFRRanger_reader.ino
libs/Wirelib/src/libraries/Wire/examples/digital_potentiometer/: digital_potentiometer.ino
libs/Wirelib/src/libraries/Wire/examples/i2c_scanner/: i2c_scanner.ino
libs/Wirelib/src/libraries/Wire/examples/master_reader/: master_reader.ino
libs/Wirelib/src/libraries/Wire/examples/master_writer/: master_writer.ino
libs/Wirelib/src/libraries/Wire/examples/slave_receiver/: slave_receiver.ino
libs/Wirelib/src/libraries/Wire/examples/slave_sender/: slave_sender.ino
